deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deliverycostcalculator
  labels:
    app: deliverycostcalculator
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: deliverycostcalculator
  type: NodePort
